--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-psutil==5.7.2
-coloredlogs>=10.0
-tabulate>=0.8.9
-smartredis==0.4.0
-redis==3.5.3
-redis-py-cluster==2.1.3
-tqdm==4.50.2
-filelock==3.4.2
-protobuf==3.20
+numpy==1.19.5
+pandas==1.1.2
+Flask==2.0.2
+Django==3.2.10
+requests==2.27.0
